<resources>
    <string name="app_name" translatable="false">KickMyB</string>
    <string name="drawer_open" translatable="false">Open navigation drawer</string>
    <string name="drawer_close" translatable="false">Close navigation drawer</string>
    <string name="username">Nom d\'utilisateur</string>
    <string name="LogIn">Connexion</string>
    <string name="SignUp">Inscription</string>
    <string name="password_confirm">Confirmer le mot de passe</string>
    <string name="password">Mot de passe</string>
    <string name="plus_task">+ Tâche</string>
    <string name="home">Accueil</string>
    <string name="add_task">Ajout de tâche</string>
    <string name="logout">Deconnexion</string>
    <string name="deadline">Date limite</string>
    <string name="task_name">Nom de la tâche</string>
    <string name="for_the">Pour le :</string>
    <string name="UsernameTooShort">Le nom d\'utilisatueur est trop court.</string>
    <string name="PasswordTooShort">Le mot de passe est trop court, 4 caractères minimum.</string>
    <string name="UsernameNull">Le nom d\'utilisateur est vide.</string>
    <string name="PasswordNull">Veuillez entrer un mot de passe.</string>
    <string name="PasswordConfNull">Veuillez confirmer votre mot de passe.</string>
    <string name="PasswordDifferent">Les mots de passe sont différents.</string>
    <string name="UsernameAlreadyTaken">Le nom d\'utilisateur est déjà utilisé.</string>
    <string name="SomethingWrong">Le nom d\'utilisateur ou le mot de passe est incorrect.</string>
    <string name="Updating">Mise à jour • • •</string>
    <string name="Loading">Chargement • • •</string>
    <string name="Disconnecting">Déconnexion • • •</string>
    <string name="Connecting">Connexion • • •</string>
    <string name="Creating">Création • • •</string>
    <string name="DaysPass"> jours passé</string>
    <string name="Days"> jours\n</string>
    <string name="DaysPassL">Temps écoulé depuis la création de la tâche :</string>
    <string name="Confirm">Confirmer</string>
    <string name="Cancel">Annuler</string>
    <string name="TaskNameEmpty">Le nom de la tâche est vide.</string>
    <string name="TaskNameTooShort">Le nom de la tâche est trop court.</string>
    <string name="SelectDate">Sélectionnez une date.</string>
    <string name="SelectDateFutur">Sélectionnez une date dans le futur.</string>
    <string name="NoConnection">Connexion indisponible</string>
    <string name="AuthDisconn">Compte déconnecté</string>
    <string name="consult_conf">Veuillez confirmer ou annuler votre changement.</string>
</resources>