<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConnexionActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <EditText
            android:id="@+id/editText_username_connexion"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editText_mdp_connexion"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textSize="20sp"
            android:inputType="textPassword"
            android:layout_marginTop="20dp"/>

        <Button
            android:id="@+id/btn_connexion_connexion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/LogIn"/>

        <Button
            android:id="@+id/btn_inscription_connexion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/SignUp"/>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>