<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConsultActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView_nomTache"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="50dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:id="@+id/btn_moins_consult"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="--"/>

        <TextView
            android:id="@+id/editText_pourcentage_consult"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:textAlignment="center"
            android:gravity="center"
            android:textSize="30dp" />

        <Button
            android:id="@+id/btn_plus_consult"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="+"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:text="@string/DaysPassL"/>

    <TextView
        android:id="@+id/textView_temps_consult"
        android:textSize="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/textView_dateEchance_consult"
        android:text=""
        android:hint="@string/deadline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/btn_confimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Confirm"
            android:layout_weight="1"
            />

        <TextView
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/btn_annuler"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Cancel"
            />

        <TextView
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>


</LinearLayout>